samples/_failures_safe/1761406431_cd0952_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0af08fca.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_0af08fca.c:180:20: error: missing terminating " character
  180 |             printf("Vertex %d: %d
      |                    ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_0af08fca.c:180:13: error: expected expression at end of input
  180 |             printf("Vertex %d: %d
      |             ^~~~~~
./samples/SAFE/__tmp_0af08fca.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0af08fca.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0af08fca.c:180:13: error: expected declaration or statement at end of input
